Production/Production/src/objects/Work_Requests__c.object
<CustomObject>
    <fields>
        <fullName>Approved_By__c</fullName>
        <label>Approved By</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_Tester__c</fullName>
        <label>Assigned Tester</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Benefits__c</fullName>
        <label>Business Benefits</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Change</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_Recommendations__c</fullName>
        <label>Design Recommendations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Impact_Assessment__c</fullName>
        <label>Impact Assessment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Must_have_for_Go_Live__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Must have for Go Live</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCB_Action_Required__c</fullName>
        <label>PCB Action Required</label>
        <picklist>
            <picklistValues>
                <fullName>Information only - Minor Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recommend for Approval - PCB to Ratify Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requires Complex Impact Assessment - Continue/Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCB to Validate Business Value - Approve/Reject</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Work_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Raised_By__c</fullName>
        <label>Raised By</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raised_Date__c</fullName>
        <label>Raised Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipName>Work_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_records__c</fullName>
        <description>For use with validation rule to ensure there is one release record per work request.</description>
        <label>Release records</label>
        <summaryForeignKey>Release_Link__c.Work_Requests__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In triage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Assigned__c</fullName>
        <label>Team Assigned</label>
        <picklist>
            <picklistValues>
                <fullName>Transformation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CloudSense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DWH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TTT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Estimate_hours__c</fullName>
        <label>Work Estimate (hours)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Work Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Subject__c</columns>
        <columns>Team_Assigned__c</columns>
        <columns>Raised_By__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Open_Live_Chat_Requests</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Team_Assigned__c</columns>
        <columns>Stage__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>contains</operation>
            <value>Sales</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>Closed - rejected,Closed - completed</value>
        </filters>
        <label>Open Requests - Live Chat Sales</label>
    </listViews>
    <listViews>
        <fullName>Open_Requests_CEO_Complaints</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Team_Assigned__c</columns>
        <columns>Stage__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>contains</operation>
            <value>CEO Complaints</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>Closed - rejected,Closed - completed</value>
        </filters>
        <label>Open Requests - CEO Complaints</label>
    </listViews>
    <listViews>
        <fullName>Open_Requests_CPS</fullName>
        <columns>NAME</columns>
        <columns>Raised_By__c</columns>
        <columns>Stage__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>contains</operation>
            <value>CPS</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>Closed - rejected,Closed - completed</value>
        </filters>
        <label>Open Requests - CPS</label>
    </listViews>
    <listViews>
        <fullName>Open_Requests_Live_Chat_Service</fullName>
        <columns>NAME</columns>
        <columns>Raised_By__c</columns>
        <columns>Stage__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>contains</operation>
            <value>customer service</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>Closed - rejected,Closed - completed</value>
        </filters>
        <label>Open Requests - Live Chat Service</label>
    </listViews>
    <listViews>
        <fullName>Open_Requests_Radian6</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Team_Assigned__c</columns>
        <columns>Stage__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>contains</operation>
            <value>Radian6</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>Closed - rejected,Closed - completed</value>
        </filters>
        <label>Open Requests - Radian6</label>
    </listViews>
    <listViews>
        <fullName>Open_Work_Requests</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Subject__c</columns>
        <columns>Stage__c</columns>
        <columns>Severity__c</columns>
        <columns>Notes__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>Closed - rejected,Closed - completed</value>
        </filters>
        <filters>
            <field>Project__c</field>
            <operation>notEqual</operation>
            <value>CPS</value>
        </filters>
        <filters>
            <field>Project__c</field>
            <operation>notEqual</operation>
            <value>Other</value>
        </filters>
        <label>Open Work Requests - Social Media</label>
    </listViews>
    <nameField>
        <displayFormat>RQ{00000}</displayFormat>
        <label>Work Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Closed_record_must_link_to_release</fullName>
        <active>false</active>
        <description>Work Requests must be linked to a release record before changing the status to close - completed.</description>
        <errorConditionFormula>ISPICKVAL( Stage__c , &quot;Closed - completed&quot;)&amp;&amp;
Release_records__c &lt; 1</errorConditionFormula>
        <errorMessage>You must link this record to a Release before changing the status to &apos;Closed - completed&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Work_Requests_In_development_Approved_by</fullName>
        <active>true</active>
        <description>If work request stage is &apos;In Development&apos; the request must be approved</description>
        <errorConditionFormula>ISPICKVAL(Stage__c, &quot;In development&quot;) &amp;&amp;  Approved_By__c = &quot;&quot; &amp;&amp; ISPICKVAL(Category__c, &quot;Change Request&quot;)</errorConditionFormula>
        <errorDisplayField>Approved_By__c</errorDisplayField>
        <errorMessage>All Change Requests must be approved before changing the stage to &apos;In development&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Work_Requests_In_development_due_date</fullName>
        <active>true</active>
        <description>If work request stage is &apos;In Development&apos; the request must have a due date</description>
        <errorConditionFormula>ISPICKVAL(Stage__c, &quot;In development&quot;) &amp;&amp; ISBLANK(Due_Date__c)</errorConditionFormula>
        <errorDisplayField>Due_Date__c</errorDisplayField>
        <errorMessage>All requests must have a due date before changing the stage to &apos;In development&apos;</errorMessage>
    </validationRules>
</CustomObject>